# trainer-garminconnect

./: .env.example  .gitignore  README.md  crontab.example  pyproject.toml  requirements.txt  run_worker.sh
src/garmin_cron/: __init__.py  domain.py  garmin_client.py  interfaces.py  login.py  main.py  metrics.py
src/garmin_cron/services/: __init__.py  task_processor.py
src/garmin_cron/task_sources/: __init__.py  file_task_source.py
src/garmin_cron/token_sources/: __init__.py  file_token_provider.py
tasks/demo-user/: task.json
tokens/: demo-user.json
